[gd_scene load_steps=41 format=2]

[ext_resource path="res://files/MainTheme.tres" type="Theme" id=1]
[ext_resource path="res://src/scenes/SlavePanel.gd" type="Script" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]
[ext_resource path="res://assets/images/raceshades/Beastkin-Cat_F.png" type="Texture" id=4]
[ext_resource path="res://assets/images/gui/panels/hpbarbot.png" type="Texture" id=5]
[ext_resource path="res://assets/images/gui/panels/hpbar.png" type="Texture" id=6]
[ext_resource path="res://assets/images/gui/panels/energybar.png" type="Texture" id=7]
[ext_resource path="res://assets/images/gui/panels/manabar.png" type="Texture" id=8]
[ext_resource path="res://assets/images/gui/taskmenu/energyicon.png" type="Texture" id=9]
[ext_resource path="res://assets/images/gui/gui icons/growth_factor.png" type="Texture" id=10]
[ext_resource path="res://assets/images/gui/gui icons/physics_factor.png" type="Texture" id=11]
[ext_resource path="res://assets/images/gui/gui icons/magic_factor.png" type="Texture" id=12]
[ext_resource path="res://assets/images/gui/gui icons/wit_factor.png" type="Texture" id=13]
[ext_resource path="res://assets/images/gui/gui icons/charm_factor.png" type="Texture" id=14]
[ext_resource path="res://assets/images/gui/gui icons/sex_factor.png" type="Texture" id=15]
[ext_resource path="res://assets/images/gui/gui icons/tame_factor.png" type="Texture" id=16]
[ext_resource path="res://assets/images/gui/gui icons/brave_factor.png" type="Texture" id=17]
[ext_resource path="res://assets/images/gui/gui icons/dirt.png" type="Texture" id=18]
[ext_resource path="res://assets/images/gui/panels/obedbar.png" type="Texture" id=19]
[ext_resource path="res://assets/images/gui/panels/fearbar.png" type="Texture" id=20]
[ext_resource path="res://assets/images/gui/panels/lustbar.png" type="Texture" id=21]
[ext_resource path="res://assets/images/gui/panels/loyalbar.png" type="Texture" id=22]
[ext_resource path="res://assets/images/gui/gui icons/food_love.png" type="Texture" id=23]
[ext_resource path="res://assets/images/gui/gui icons/food_hate.png" type="Texture" id=24]
[ext_resource path="res://assets/textures/generic_button.tres" type="Theme" id=25]
[ext_resource path="res://assets/images/iconsclasses/Worker.png" type="Texture" id=26]
[ext_resource path="res://src/class_selection.tscn" type="PackedScene" id=27]
[ext_resource path="res://assets/images/gui/inventory/itemicon3.png" type="Texture" id=28]
[ext_resource path="res://assets/images/gui/inventory/itemicon4.png" type="Texture" id=29]
[ext_resource path="res://assets/images/gui/inventory/itemicon2.png" type="Texture" id=30]
[ext_resource path="res://assets/images/iconsitems/Wood.png" type="Texture" id=31]
[ext_resource path="res://assets/images/gui/gui icons/up.png" type="Texture" id=32]
[ext_resource path="res://assets/images/gui/gui icons/up-press.png" type="Texture" id=33]
[ext_resource path="res://assets/images/gui/gui icons/down.png" type="Texture" id=34]
[ext_resource path="res://assets/images/gui/gui icons/down-press.png" type="Texture" id=35]
[ext_resource path="res://assets/images/gui/gui icons/down-hl.png" type="Texture" id=36]
[ext_resource path="res://assets/images/gui/ui_slot_cross.png" type="Texture" id=37]
[ext_resource path="res://src/RightClickReactButton.gd" type="Script" id=38]
[ext_resource path="res://assets/images/iconsskills/slash.png" type="Texture" id=39]
[ext_resource path="res://src/imageselect.tscn" type="PackedScene" id=40]

[node name="SlavePanel" type="Panel"]
margin_left = 30.0
margin_top = 6.0
margin_right = 1221.0
margin_bottom = 870.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="name" type="Label" parent="."]
margin_left = 29.1887
margin_top = 224.431
margin_right = 191.189
margin_bottom = 249.431
text = "Name"
align = 1

[node name="currentwork" type="Label" parent="." groups=[
"hide_stranger",
]]
margin_left = 970.86
margin_top = 111.456
margin_right = 1132.86
margin_bottom = 136.456
text = "task"
align = 1

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 246.0
margin_top = 143.0
margin_right = 902.0
margin_bottom = 621.0
bbcode_enabled = true

[node name="Portrait" type="TextureRect" parent="."]
margin_left = 13.9868
margin_top = 13.078
margin_right = 213.987
margin_bottom = 213.078
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="BodyPanel" type="Panel" parent="."]
margin_left = 1189.0
margin_top = -2.0
margin_right = 1814.0
margin_bottom = 868.0
mouse_filter = 2

[node name="Body" type="TextureRect" parent="."]
margin_left = 1196.0
margin_right = 1806.0
margin_bottom = 857.0
mouse_filter = 2
texture = ExtResource( 4 )
expand = true
stretch_mode = 7

[node name="base_stats" type="VBoxContainer" parent="."]
margin_left = 233.0
margin_top = 25.0
margin_right = 433.0
margin_bottom = 118.0
custom_constants/separation = 9

[node name="hp" type="TextureProgress" parent="base_stats"]
margin_right = 200.0
margin_bottom = 25.0
rect_min_size = Vector2( 200, 25 )
value = 50.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 6 )
nine_patch_stretch = true

[node name="Label" type="Label" parent="base_stats/hp"]
margin_right = 199.0
margin_bottom = 24.0
text = "1.100"
align = 1

[node name="energy" type="TextureProgress" parent="base_stats"]
margin_top = 34.0
margin_right = 200.0
margin_bottom = 59.0
rect_min_size = Vector2( 200, 25 )
value = 50.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 7 )
nine_patch_stretch = true

[node name="Label" type="Label" parent="base_stats/energy"]
margin_right = 199.0
margin_bottom = 24.0
text = "1.100"
align = 1

[node name="mp" type="TextureProgress" parent="base_stats"]
margin_top = 68.0
margin_right = 200.0
margin_bottom = 93.0
rect_min_size = Vector2( 200, 25 )
value = 50.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 8 )
nine_patch_stretch = true

[node name="Label" type="Label" parent="base_stats/mp"]
margin_right = 199.0
margin_bottom = 24.0
text = "1.100"
align = 1

[node name="progress" type="HBoxContainer" parent="."]
margin_left = 441.0
margin_top = 20.0
margin_right = 847.0
margin_bottom = 45.0
custom_constants/separation = 2

[node name="physics" type="Label" parent="progress"]
margin_right = 100.0
margin_bottom = 25.0
rect_min_size = Vector2( 100, 25 )
mouse_filter = 0
text = "physics"
align = 1

[node name="wits" type="Label" parent="progress"]
margin_left = 102.0
margin_right = 202.0
margin_bottom = 25.0
rect_min_size = Vector2( 100, 25 )
mouse_filter = 0
text = "wits"
align = 1

[node name="charm" type="Label" parent="progress"]
margin_left = 204.0
margin_right = 304.0
margin_bottom = 25.0
rect_min_size = Vector2( 100, 25 )
mouse_filter = 0
text = "charm"
align = 1

[node name="sexuals" type="Label" parent="progress"]
margin_left = 306.0
margin_right = 406.0
margin_bottom = 25.0
rect_min_size = Vector2( 100, 25 )
mouse_filter = 0
text = "sexuals"
align = 1

[node name="factors" type="VBoxContainer" parent="."]
editor/display_folded = true
margin_left = 66.2053
margin_top = 259.795
margin_right = 187.205
margin_bottom = 574.795
size_flags_horizontal = 0
size_flags_vertical = 0
custom_constants/separation = 0

[node name="base_exp" type="TextureRect" parent="factors"]
editor/display_folded = true
margin_right = 35.0
margin_bottom = 35.0
rect_min_size = Vector2( 35, 35 )
mouse_filter = 0
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 9 )
expand = true

[node name="Label" type="Label" parent="factors/base_exp"]
margin_left = 34.0
margin_top = 7.0
margin_right = 111.0
margin_bottom = 31.0
text = "0"
align = 1

[node name="growth_factor" type="TextureRect" parent="factors"]
editor/display_folded = true
margin_top = 35.0
margin_right = 35.0
margin_bottom = 70.0
rect_min_size = Vector2( 35, 35 )
mouse_filter = 0
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 10 )
expand = true

[node name="Label" type="Label" parent="factors/growth_factor"]
margin_left = 59.2385
margin_top = 7.0
margin_right = 219.239
margin_bottom = 31.0
text = "25"

[node name="physics_factor" type="TextureRect" parent="factors"]
editor/display_folded = true
margin_top = 70.0
margin_right = 35.0
margin_bottom = 105.0
rect_min_size = Vector2( 35, 35 )
mouse_filter = 0
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 11 )
expand = true

[node name="Label" type="Label" parent="factors/physics_factor"]
margin_left = 59.2385
margin_top = 7.0
margin_right = 219.239
margin_bottom = 31.0
text = "25"

[node name="magic_factor" type="TextureRect" parent="factors"]
editor/display_folded = true
margin_top = 105.0
margin_right = 35.0
margin_bottom = 140.0
rect_min_size = Vector2( 35, 35 )
mouse_filter = 0
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 12 )
expand = true

[node name="Label" type="Label" parent="factors/magic_factor"]
margin_left = 59.2385
margin_top = 7.0
margin_right = 219.239
margin_bottom = 31.0
text = "25"

[node name="wits_factor" type="TextureRect" parent="factors"]
editor/display_folded = true
margin_top = 140.0
margin_right = 35.0
margin_bottom = 175.0
rect_min_size = Vector2( 35, 35 )
mouse_filter = 0
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 13 )
expand = true

[node name="Label" type="Label" parent="factors/wits_factor"]
margin_left = 59.2385
margin_top = 7.0
margin_right = 219.239
margin_bottom = 31.0
text = "25"

[node name="charm_factor" type="TextureRect" parent="factors"]
editor/display_folded = true
margin_top = 175.0
margin_right = 35.0
margin_bottom = 210.0
rect_min_size = Vector2( 35, 35 )
mouse_filter = 0
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 14 )
expand = true

[node name="Label" type="Label" parent="factors/charm_factor"]
margin_left = 59.2385
margin_top = 7.0
margin_right = 219.239
margin_bottom = 31.0
text = "25"

[node name="sexuals_factor" type="TextureRect" parent="factors"]
editor/display_folded = true
margin_top = 210.0
margin_right = 35.0
margin_bottom = 245.0
rect_min_size = Vector2( 35, 35 )
mouse_filter = 0
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 15 )
expand = true

[node name="Label" type="Label" parent="factors/sexuals_factor"]
margin_left = 59.2385
margin_top = 7.0
margin_right = 219.239
margin_bottom = 31.0
text = "25"

[node name="tame_factor" type="TextureRect" parent="factors"]
editor/display_folded = true
margin_top = 245.0
margin_right = 35.0
margin_bottom = 280.0
rect_min_size = Vector2( 35, 35 )
mouse_filter = 0
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 16 )
expand = true

[node name="Label" type="Label" parent="factors/tame_factor"]
margin_left = 59.2385
margin_top = 7.0
margin_right = 219.239
margin_bottom = 31.0
text = "25"

[node name="brave_factor" type="TextureRect" parent="factors"]
editor/display_folded = true
margin_top = 280.0
margin_right = 35.0
margin_bottom = 315.0
rect_min_size = Vector2( 35, 35 )
mouse_filter = 0
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 17 )
expand = true

[node name="Label" type="Label" parent="factors/brave_factor"]
margin_left = 59.2385
margin_top = 7.0
margin_right = 219.239
margin_bottom = 31.0
text = "25"

[node name="dirtiness" type="TextureRect" parent="factors"]
editor/display_folded = true
visible = false
margin_top = 280.0
margin_right = 35.0
margin_bottom = 315.0
rect_min_size = Vector2( 35, 35 )
mouse_filter = 0
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 18 )
expand = true

[node name="Label" type="Label" parent="factors/dirtiness"]
margin_left = 59.2385
margin_top = 7.0
margin_right = 219.239
margin_bottom = 31.0
text = "25"

[node name="mentality" type="VBoxContainer" parent="." groups=[
"hide_master",
"hide_stranger",
]]
margin_left = 15.0
margin_top = 582.0
margin_right = 215.0
margin_bottom = 879.0
custom_constants/separation = 9

[node name="obedience" type="TextureProgress" parent="mentality"]
margin_right = 200.0
margin_bottom = 25.0
rect_min_size = Vector2( 200, 25 )
value = 50.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 19 )
nine_patch_stretch = true

[node name="Label" type="Label" parent="mentality/obedience"]
margin_right = 199.0
margin_bottom = 24.0
text = "1.100"
align = 1

[node name="fear" type="TextureProgress" parent="mentality"]
margin_top = 34.0
margin_right = 200.0
margin_bottom = 59.0
rect_min_size = Vector2( 200, 25 )
value = 50.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 20 )
nine_patch_stretch = true

[node name="Label" type="Label" parent="mentality/fear"]
margin_right = 199.0
margin_bottom = 24.0
text = "1.100"
align = 1

[node name="lust" type="TextureProgress" parent="mentality"]
margin_top = 68.0
margin_right = 200.0
margin_bottom = 93.0
rect_min_size = Vector2( 200, 25 )
value = 50.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 21 )
nine_patch_stretch = true

[node name="Label" type="Label" parent="mentality/lust"]
margin_right = 199.0
margin_bottom = 24.0
text = "1.100"
align = 1

[node name="loyal" type="TextureProgress" parent="mentality"]
margin_top = 102.0
margin_right = 200.0
margin_bottom = 127.0
rect_min_size = Vector2( 200, 25 )
value = 50.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 22 )
nine_patch_stretch = true

[node name="Label" type="Label" parent="mentality/loyal"]
margin_right = 199.0
margin_bottom = 24.0
text = "1.100"
align = 1

[node name="food_love" type="TextureRect" parent="mentality"]
margin_top = 136.0
margin_right = 35.0
margin_bottom = 171.0
rect_min_size = Vector2( 35, 35 )
size_flags_horizontal = 0
texture = ExtResource( 23 )
expand = true

[node name="Label" type="Label" parent="mentality/food_love"]
margin_left = 36.5083
margin_top = 8.41333
margin_right = 236.508
margin_bottom = 32.4133
text = "Food Pref: Grai"
autowrap = true

[node name="food_hate" type="TextureRect" parent="mentality"]
margin_top = 180.0
margin_right = 35.0
margin_bottom = 215.0
rect_min_size = Vector2( 35, 35 )
size_flags_horizontal = 0
texture = ExtResource( 24 )
expand = true

[node name="Label" type="Label" parent="mentality/food_hate"]
margin_left = 36.5083
margin_top = 8.41333
margin_right = 236.508
margin_bottom = 32.4133
text = "Food Pref: Grai"
autowrap = true

[node name="job" type="VBoxContainer" parent="." groups=[
"hide_stranger",
]]
editor/display_folded = true
margin_left = 953.0
margin_top = 155.0
margin_right = 1153.0
margin_bottom = 248.0
custom_constants/separation = 9

[node name="energy" type="ProgressBar" parent="job"]
visible = false
margin_right = 200.0
margin_bottom = 25.0
rect_min_size = Vector2( 200, 25 )
percent_visible = false

[node name="Label" type="Label" parent="job/energy"]
margin_right = 199.0
margin_bottom = 24.0
text = "1.100"
align = 1

[node name="fatigue" type="ProgressBar" parent="job"]
margin_right = 200.0
margin_bottom = 25.0
rect_min_size = Vector2( 200, 25 )
percent_visible = false

[node name="Label" type="Label" parent="job/fatigue"]
margin_right = 199.0
margin_bottom = 24.0
text = "1.100"
align = 1

[node name="exhaustion" type="ProgressBar" parent="job"]
margin_top = 34.0
margin_right = 200.0
margin_bottom = 59.0
rect_min_size = Vector2( 200, 25 )
percent_visible = false

[node name="Label" type="Label" parent="job/exhaustion"]
margin_right = 199.0
margin_bottom = 24.0
text = "1.100"
align = 1

[node name="traitslabel" type="Label" parent="."]
margin_left = 279.189
margin_top = 654.431
margin_right = 441.189
margin_bottom = 679.431
text = "Traits"
align = 1

[node name="traits" type="VBoxContainer" parent="."]
editor/display_folded = true
margin_left = 263.0
margin_top = 682.0
margin_right = 463.0
margin_bottom = 830.0
custom_constants/separation = 9
alignment = 1

[node name="Button" type="Label" parent="traits"]
visible = false
margin_top = 62.0
margin_right = 200.0
margin_bottom = 86.0
text = "1.100"
align = 1

[node name="controls" type="VBoxContainer" parent="." groups=[
"hide_stranger",
]]
editor/display_folded = true
margin_left = 948.0
margin_top = 274.0
margin_right = 1158.0
margin_bottom = 760.0
theme = ExtResource( 25 )
custom_constants/separation = 6

[node name="JobButton" type="Button" parent="controls"]
margin_right = 210.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
text = "Job"

[node name="GearButton" type="Button" parent="controls"]
margin_top = 56.0
margin_right = 210.0
margin_bottom = 106.0
rect_min_size = Vector2( 0, 50 )
text = "Gear"

[node name="CustmizeButton" type="Button" parent="controls"]
margin_top = 112.0
margin_right = 210.0
margin_bottom = 162.0
rect_min_size = Vector2( 0, 50 )
text = "Customize"

[node name="ClassButton" type="Button" parent="controls"]
margin_top = 168.0
margin_right = 210.0
margin_bottom = 218.0
rect_min_size = Vector2( 0, 50 )
text = "Class"

[node name="professions" type="GridContainer" parent="."]
editor/display_folded = true
margin_left = 1198.0
margin_top = 880.656
margin_right = 1738.0
margin_bottom = 980.656
grow_horizontal = 0
grow_vertical = 0
columns = 8

[node name="Button" type="TextureRect" parent="professions"]
visible = false
margin_right = 100.0
margin_bottom = 100.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 100, 100 )
texture = ExtResource( 26 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="professions/Button"]
margin_left = -1.0
margin_top = 76.0
margin_right = 100.0
margin_bottom = 100.0
align = 1

[node name="class_learn" parent="." instance=ExtResource( 27 )]

[node name="job_panel" type="Panel" parent="."]
editor/display_folded = true
visible = false
margin_left = 294.382
margin_top = 41.197
margin_right = 1312.39
margin_bottom = 841.197

[node name="ScrollContainer" type="ScrollContainer" parent="job_panel"]
margin_left = 22.0
margin_top = 24.0
margin_right = 340.0
margin_bottom = 741.0
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="job_panel/ScrollContainer"]
margin_right = 318.0
size_flags_horizontal = 3

[node name="Button" type="Button" parent="job_panel/ScrollContainer/VBoxContainer"]
visible = false
margin_right = 318.0
margin_bottom = 30.0
toggle_mode = true

[node name="RichTextLabel" type="RichTextLabel" parent="job_panel"]
margin_left = 450.952
margin_top = 63.1599
margin_right = 940.952
margin_bottom = 268.16
bbcode_enabled = true

[node name="interactions" type="HSlider" parent="job_panel"]
visible = false
margin_left = 482.801
margin_top = 747.812
margin_right = 892.801
margin_bottom = 779.812
ticks_on_borders = true

[node name="iteractionslabel" type="Label" parent="job_panel"]
visible = false
margin_left = 499.825
margin_top = 720.815
margin_right = 874.825
margin_bottom = 745.815
text = "Days"
align = 1

[node name="resourcelabel" type="Label" parent="job_panel"]
margin_left = 532.843
margin_top = 352.503
margin_right = 859.843
margin_bottom = 376.503
text = "Select Desired Resources"
align = 1

[node name="ResourceOptions" type="HBoxContainer" parent="job_panel"]
margin_left = 460.002
margin_top = 385.23
margin_right = 954.002
margin_bottom = 485.23

[node name="Button" type="TextureButton" parent="job_panel/ResourceOptions"]
visible = false
margin_right = 100.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
size_flags_vertical = 0
texture_normal = ExtResource( 28 )
texture_pressed = ExtResource( 29 )
texture_hover = ExtResource( 30 )
expand = true

[node name="icon" type="TextureRect" parent="job_panel/ResourceOptions/Button"]
show_behind_parent = true
margin_left = 8.0
margin_top = 8.0
margin_right = 90.0
margin_bottom = 90.0
mouse_filter = 2
texture = ExtResource( 31 )
expand = true

[node name="number" type="Label" parent="job_panel/ResourceOptions/Button"]
margin_left = 12.0
margin_top = 68.0
margin_right = 90.0
margin_bottom = 92.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "1"
align = 1

[node name="restup" type="TextureButton" parent="job_panel"]
margin_left = 509.51
margin_top = 554.774
margin_right = 549.51
margin_bottom = 594.774
texture_normal = ExtResource( 32 )
texture_pressed = ExtResource( 33 )
texture_hover = ExtResource( 32 )
expand = true

[node name="workup" type="TextureButton" parent="job_panel"]
margin_left = 669.51
margin_top = 554.287
margin_right = 709.51
margin_bottom = 594.287
texture_normal = ExtResource( 32 )
texture_pressed = ExtResource( 33 )
texture_hover = ExtResource( 32 )
expand = true

[node name="joyup" type="TextureButton" parent="job_panel"]
margin_left = 829.51
margin_top = 554.287
margin_right = 869.51
margin_bottom = 594.287
texture_normal = ExtResource( 32 )
texture_pressed = ExtResource( 33 )
texture_hover = ExtResource( 32 )
expand = true

[node name="restdown" type="TextureButton" parent="job_panel"]
margin_left = 509.51
margin_top = 640.941
margin_right = 549.51
margin_bottom = 680.941
texture_normal = ExtResource( 34 )
texture_pressed = ExtResource( 35 )
texture_hover = ExtResource( 36 )
expand = true

[node name="workdown" type="TextureButton" parent="job_panel"]
margin_left = 669.51
margin_top = 640.941
margin_right = 709.51
margin_bottom = 680.941
texture_normal = ExtResource( 34 )
texture_pressed = ExtResource( 35 )
texture_hover = ExtResource( 36 )
expand = true

[node name="joydown" type="TextureButton" parent="job_panel"]
margin_left = 829.51
margin_top = 640.941
margin_right = 869.51
margin_bottom = 680.941
texture_normal = ExtResource( 34 )
texture_pressed = ExtResource( 35 )
texture_hover = ExtResource( 36 )
expand = true

[node name="restlabel" type="Label" parent="job_panel"]
margin_left = 501.212
margin_top = 606.42
margin_right = 561.213
margin_bottom = 630.42
text = "0"
align = 1

[node name="worklabel" type="Label" parent="job_panel"]
margin_left = 661.213
margin_top = 605.932
margin_right = 721.213
margin_bottom = 629.932
text = "0"
align = 1

[node name="joylabel" type="Label" parent="job_panel"]
margin_left = 821.213
margin_top = 605.932
margin_right = 881.213
margin_bottom = 629.932
text = "0"
align = 1

[node name="totallabel" type="Label" parent="job_panel"]
margin_left = 568.737
margin_top = 687.947
margin_right = 812.737
margin_bottom = 711.947
text = "Free Hours left: "
align = 1

[node name="totallabel2" type="Label" parent="job_panel"]
margin_left = 455.704
margin_top = 521.784
margin_right = 605.704
margin_bottom = 545.784
text = "Rest Hours"
align = 1

[node name="totallabel3" type="Label" parent="job_panel"]
margin_left = 615.704
margin_top = 521.784
margin_right = 765.704
margin_bottom = 545.784
text = "Work Hours"
align = 1

[node name="totallabel4" type="Label" parent="job_panel"]
margin_left = 775.704
margin_top = 521.296
margin_right = 925.704
margin_bottom = 545.296
text = "Joy Hours"
align = 1

[node name="SkillPanelBG" type="Panel" parent="."]
margin_left = -1.0
margin_top = 861.0
margin_right = 1187.0
margin_bottom = 993.0

[node name="SkillPanel" type="HBoxContainer" parent="."]
margin_left = 14.6339
margin_top = 876.339
margin_right = 784.634
margin_bottom = 951.339
custom_constants/separation = 7

[node name="Button" type="TextureButton" parent="SkillPanel"]
editor/display_folded = true
visible = false
margin_right = 100.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
texture_normal = ExtResource( 37 )
expand = true
script = ExtResource( 38 )

[node name="icon" type="TextureRect" parent="SkillPanel/Button"]
visible = false
margin_left = 0.7547
margin_top = -0.37738
margin_right = 100.755
margin_bottom = 99.6226
rect_min_size = Vector2( 100, 100 )
mouse_filter = 2
texture = ExtResource( 39 )
expand = true
stretch_mode = 6

[node name="charges" type="Label" parent="SkillPanel/Button"]
visible = false
margin_left = 58.0462
margin_top = 1.50122
margin_right = 98.0462
margin_bottom = 25.5012
text = "1"
align = 2

[node name="energycost" type="Label" parent="SkillPanel/Button"]
visible = false
margin_left = 58.0462
margin_top = 79.5012
margin_right = 98.0462
margin_bottom = 103.501
custom_colors/font_color = Color( 0.917647, 0.968627, 0.0588235, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "1"
align = 2

[node name="manacost" type="Label" parent="SkillPanel/Button"]
visible = false
margin_left = 4.04623
margin_top = 79.5012
margin_right = 44.0462
margin_bottom = 103.501
custom_colors/font_color = Color( 0.917647, 0.968627, 0.0588235, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "1"

[node name="DetailsPanel" type="Panel" parent="."]
editor/display_folded = true
visible = false
margin_left = 306.132
margin_top = 62.1831
margin_right = 1324.13
margin_bottom = 817.183

[node name="VBoxContainer" type="VBoxContainer" parent="DetailsPanel"]
margin_left = 24.3436
margin_top = 27.2075
margin_right = 315.344
margin_bottom = 195.207
custom_constants/separation = 9

[node name="descript" type="Button" parent="DetailsPanel/VBoxContainer"]
margin_right = 291.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
text = "Add Custom Description"

[node name="nickname" type="Button" parent="DetailsPanel/VBoxContainer"]
margin_top = 59.0
margin_right = 291.0
margin_bottom = 109.0
rect_min_size = Vector2( 0, 50 )
text = "Set Nickname"

[node name="icon" type="Button" parent="DetailsPanel/VBoxContainer"]
margin_top = 118.0
margin_right = 291.0
margin_bottom = 168.0
rect_min_size = Vector2( 0, 50 )
text = "Select Custom Portrait"

[node name="body" type="Button" parent="DetailsPanel/VBoxContainer"]
margin_top = 177.0
margin_right = 291.0
margin_bottom = 227.0
rect_min_size = Vector2( 0, 50 )
text = "Select Custom Body"

[node name="ImageSelect" parent="." instance=ExtResource( 40 )]
margin_left = -1237.97
margin_top = -786.834
margin_right = 346.031
margin_bottom = 133.166
